# MPU6050

./: CMakeLists.txt  MPU6050.c  MPU6050.h  README.md  build_remote  example.c  get_offsets.c
